Fix overflow bug

--- a/public/css/components/directory.scss
+++ b/public/css/components/directory.scss
@@ -4,7 +4,6 @@
   background-color: white;
   width: 100%;
   height: 100%;
-  overflow: auto;
   min-width: 300px;
   min-height: 300px;
   &__body {
